Fixed jumping for nav item.

--- a/assets/sass/frontend/site/_nav.sass
+++ b/assets/sass/frontend/site/_nav.sass
@@ -48,7 +48,6 @@ header#menu
                     color: $color-teritary
 
             a.active
-                font-weight: $font-weight-bold
                 color: $color-teritary !important
 
         .flag
@@ -142,9 +141,6 @@ header#menu
 
                     &:hover
                         color: $color-teritary
-
-                &.active a, a:focus
-                    font-weight: $font-weight-bold
 
             .dropdown-menu
                 background: $color-secondary
